...
        handleAnswer(false)
    }
    
    func showNextQuestionOrResults() {
        if self.isLastQuestion() {
            // идём в состояние "Результат квиза"
            let quizResults = QuizResultsViewModel(title: "Этот раунд окончен!",
                                                   text: "Ваш результат: \(self.correctAnswers)/\(self.questionsAmount)",
                                                   buttonText: "Сыграть ещё раз")
            self.viewController?.show(quiz: quizResults)
        } else {
            self.switchToNextQuestion()
            questionFactory?.requestNextQuestion()
...
